adding fields in survey form

--- a/index.html
+++ b/index.html
@@ -17,11 +17,27 @@
         <label id="number-label">Roll No</label>
         <input type="number" id="number" placeholder="Enter Roll No">
         <label>How do you rate our courses</label>
-        <select id="dropdown">
+        <select class="dropdown">
           <option>Excellent</option>
           <option>Very Good</option>
           <option>Good</option>
         </select>
+        <label>How do you rate our teachers</label>
+        <select class="dropdown">
+          <option>Excellent</option>
+          <option>Very Good</option>
+          <option>Good</option>
+        </select>
+        <label>How do you rate our facilities</label>
+        <select class="dropdown">
+          <option>Excellent</option>
+          <option>Very Good</option>
+          <option>Good</option>
+        </select>
+        <label>Write your complaints</label>
+        <textarea rows="5" class="form-control"></textarea>
+        <br>
+        <button type="submit" class="button">Submit</button>
       </form>
     
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
