--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
       <h1>Hello World</h1>
+      <h2>My Name Is Richmond</h2>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
